--- a/config/build-cluster/boskos/boskos_resources.yaml
+++ b/config/build-cluster/boskos/boskos_resources.yaml
@@ -14,6 +14,25 @@
 
 resources:
 - names:
+  - knative-boskos-81
+  - knative-boskos-82
+  - knative-boskos-83
+  - knative-boskos-84
+  - knative-boskos-85
+  - knative-boskos-86
+  - knative-boskos-87
+  - knative-boskos-88
+  - knative-boskos-89
+  - knative-boskos-90
+  - knative-boskos-91
+  - knative-boskos-92
+  - knative-boskos-93
+  - knative-boskos-94
+  - knative-boskos-95
+  - knative-boskos-96
+  - knative-boskos-97
+  - knative-boskos-98
+  - knative-boskos-99
   - knative-boskos-100
   state: dirty
   type: gke-project
