Add missing dotdev

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -1053,6 +1053,7 @@ periodics:
       needs-dind: true
     - dot-release: true
       go113: true
+      dot-dev: true
       needs-dind: true
       env-vars:
       - ORG_NAME=knative-sandbox
