--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -508,25 +508,28 @@ test_groups:
 - name: ci-knative-sandbox-net-kourier-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-net-kourier-go-coverage
   short_text_metric: "coverage"
-- name: ci-knative-sandbox-discovery-continuous
-  gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-continuous
+- name: ci-knative-sandbox-async-component-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-continuous
   alert_stale_results_hours: 3
-- name: ci-knative-sandbox-discovery-nightly-release
-  gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-nightly-release
+- name: ci-knative-sandbox-async-component-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-nightly-release
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 1
-- name: ci-knative-sandbox-discovery-dot-release
-  gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-dot-release
+- name: ci-knative-sandbox-async-component-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-dot-release
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   alert_stale_results_hours: 170
   num_failures_to_alert: 1
-- name: ci-knative-sandbox-discovery-auto-release
-  gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-auto-release
+- name: ci-knative-sandbox-async-component-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-auto-release
   alert_options:
     alert_mail_to_addresses: "serverless-engprod-sea@google.com"
   num_failures_to_alert: 1
+- name: ci-knative-sandbox-async-component-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-go-coverage
+  short_text_metric: "coverage"
 - name: ci-knative-sandbox-discovery-continuous
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-continuous
   alert_stale_results_hours: 3
@@ -801,8 +804,11 @@ test_groups:
 - name: ci-knative-operator-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-operator-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
-- name: ci-knative-sandbox-discovery-continuous-beta-prow-tests
-  gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-continuous-beta-prow-tests
+- name: ci-knative-sandbox-async-component-continuous-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-continuous-beta-prow-tests
+- name: ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
+  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
+  short_text_metric: "coverage"
 - name: ci-knative-sandbox-discovery-continuous-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-sandbox-discovery-continuous-beta-prow-tests
 - name: ci-knative-sandbox-eventing-kafka-continuous-beta-prow-tests
@@ -817,9 +823,6 @@ test_groups:
   short_text_metric: "coverage"
 - name: ci-knative-networking-go-coverage-beta-prow-tests
   gcs_prefix: knative-prow/logs/ci-knative-networking-go-coverage-beta-prow-tests
-  short_text_metric: "coverage"
-- name: ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
-  gcs_prefix: knative-prow/logs/ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
   short_text_metric: "coverage"
 - name: ci-knative-backup-artifacts
   gcs_prefix: knative-prow/logs/ci-knative-backup-artifacts
@@ -1250,32 +1253,37 @@ dashboards:
   - name: coverage
     test_group_name: ci-knative-sandbox-net-kourier-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
-- name: discovery
+- name: async-component
   dashboard_tab:
   - name: continuous
-    test_group_name: ci-knative-sandbox-discovery-continuous
+    test_group_name: ci-knative-sandbox-async-component-continuous
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 3
   - name: nightly
-    test_group_name: ci-knative-sandbox-discovery-nightly-release
+    test_group_name: ci-knative-sandbox-async-component-nightly-release
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 1
   - name: dot-release
-    test_group_name: ci-knative-sandbox-discovery-dot-release
+    test_group_name: ci-knative-sandbox-async-component-dot-release
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 1
   - name: auto-release
-    test_group_name: ci-knative-sandbox-discovery-auto-release
+    test_group_name: ci-knative-sandbox-async-component-auto-release
     base_options: "sort-by-name="
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 1
+  - name: coverage
+    test_group_name: ci-knative-sandbox-async-component-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: discovery
+  dashboard_tab:
   - name: continuous
     test_group_name: ci-knative-sandbox-discovery-continuous
     base_options: "sort-by-name="
@@ -1857,9 +1865,12 @@ dashboards:
   - name: ci-knative-operator-go-coverage
     test_group_name: ci-knative-operator-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
-  - name: ci-knative-sandbox-discovery-continuous
-    test_group_name: ci-knative-sandbox-discovery-continuous-beta-prow-tests
+  - name: ci-knative-sandbox-async-component-continuous
+    test_group_name: ci-knative-sandbox-async-component-continuous-beta-prow-tests
     base_options: "sort-by-failures="
+  - name: ci-knative-sandbox-async-component-go-coverage
+    test_group_name: ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
   - name: ci-knative-sandbox-discovery-continuous
     test_group_name: ci-knative-sandbox-discovery-continuous-beta-prow-tests
     base_options: "sort-by-failures="
@@ -1877,9 +1888,6 @@ dashboards:
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
   - name: ci-knative-networking-go-coverage
     test_group_name: ci-knative-networking-go-coverage-beta-prow-tests
-    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
-  - name: ci-knative-sandbox-async-component-go-coverage
-    test_group_name: ci-knative-sandbox-async-component-go-coverage-beta-prow-tests
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: utilities
   dashboard_tab:
@@ -1938,6 +1946,7 @@ dashboard_groups:
   - "net-http01"
   - "net-istio"
   - "net-kourier"
+  - "async-component"
   - "discovery"
   - "eventing-kafka"
   - "eventing-kafka-broker"
