--- a/config/prod/prow/jobs/config.yaml
+++ b/config/prod/prow/jobs/config.yaml
@@ -3347,6 +3347,43 @@ presubmits:
         secret:
           secretName: test-account
   knative-sandbox/async-component:
+  - name: pull-knative-sandbox-async-component-build-tests
+    agent: kubernetes
+    context: pull-knative-sandbox-async-component-build-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sandbox-async-component-build-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-async-component-build-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/async-component
+    cluster: "build-knative"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--build-tests"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: test-account
+        secret:
+          secretName: test-account
   - name: pull-knative-sandbox-async-component-unit-tests
     agent: kubernetes
     context: pull-knative-sandbox-async-component-unit-tests
@@ -3365,6 +3402,43 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--unit-tests"
+        volumeMounts:
+        - name: repoview-token
+          mountPath: /etc/repoview-token
+          readOnly: true
+        - name: test-account
+          mountPath: /etc/test-account
+          readOnly: true
+        env:
+        - name: GOOGLE_APPLICATION_CREDENTIALS
+          value: /etc/test-account/service-account.json
+        - name: E2E_CLUSTER_REGION
+          value: us-central1
+      volumes:
+      - name: repoview-token
+        secret:
+          secretName: repoview-token
+      - name: test-account
+        secret:
+          secretName: test-account
+  - name: pull-knative-sandbox-async-component-integration-tests
+    agent: kubernetes
+    context: pull-knative-sandbox-async-component-integration-tests
+    always_run: true
+    rerun_command: "/test pull-knative-sandbox-async-component-integration-tests"
+    trigger: "(?m)^/test (all|pull-knative-sandbox-async-component-integration-tests),?(\\s+|$)"
+    decorate: true
+    path_alias: knative.dev/async-component
+    cluster: "build-knative"
+    spec:
+      containers:
+      - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+        imagePullPolicy: Always
+        command:
+        - runner.sh
+        args:
+        - "./test/presubmit-tests.sh"
+        - "--integration-tests"
         volumeMounts:
         - name: repoview-token
           mountPath: /etc/repoview-token
